--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
-    "velite": "^0.3.0",
+    "velite": "0.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -43,3 +43,4 @@
     "typescript": "^5"
   }
 }
+
