--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "velite --clean && next dev",
-    "build": "velite --clean && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "velite": "velite"
+    "lint": "eslint"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -19,14 +18,16 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.17.0",
     "tailwind-merge": "^3.3.1",
-    "velite": "0.3.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -43,4 +44,3 @@
     "typescript": "^5"
   }
 }
-
